Added access token model Added api token local persistence Implemented delete, find, update methods from user api repository

--- a/Gooze/es.lproj/Localizable.strings
+++ b/Gooze/es.lproj/Localizable.strings
@@ -8,4 +8,4 @@
 // Protocols/GZEUserApiRepositoryError
 "Unknown error"="Error desconcido";
 // Services/GZEUserApiRepository
-"Username and password are required"="Ingresa tu usuario y contraseña";
+"email and password are required"="Ingresa tu correo electrónico y contraseña";
