Added forgot password button

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "vm.login.loginViewTitle"="Login";
 "vm.login.loginButtonTitle"="Login";
 "vm.login.signUpButtonTitle"="Sign up";
+"vm.login.forgotPassword"="Forgot my password";
 "vm.login.alertOkButtonTitle"="Ok";
 
 // Views/GZEBlurViewController
