--- a/Gooze/es.lproj/Localizable.strings
+++ b/Gooze/es.lproj/Localizable.strings
@@ -46,6 +46,7 @@
 "vm.login.loginViewTitle"="Inicio de sesión";
 "vm.login.loginButtonTitle"="Entrar";
 "vm.login.signUpButtonTitle"="Registrar";
+"vm.login.forgotPassword"="Olvidé mi contraseña";
 "vm.login.alertOkButtonTitle"="Ok";
 
 // Views/GZEBlurViewController
