--- a/Gooze/es.lproj/Localizable.strings
+++ b/Gooze/es.lproj/Localizable.strings
@@ -5,15 +5,6 @@
   Created by Yussel on 10/21/17.
   Copyright © 2017 Gooze. All rights reserved.
 */
-// GoozeApi/GZEApiError
-"username"="usuario";
-"email"="correo electrónico";
-"password"="contraseña";
-"birthday"="fecha de nacimiento";
-
-"can\'t be blank"="no puede estar vacio";
-"is not a valid date"="no es una fecha valida";
-"Invalid password"="no puede estar vacio";
 
 // Protocols/GZEUserApiRepositoryError
 "Unknown error"="Error desconcido";
@@ -23,9 +14,6 @@
 "validation.invalidEmail"="Ingresa un correo electrónico válido";
 "validation.lengthMin"="El campo %@ debe tener al menos %d caracteres";
 "validation.lengthMax"="El campo %@ debe tener máximo %d caracteres";
-
-// Services/GZEUserApiRepository
-"email and password are required"="Ingresa tu correo electrónico y contraseña";
 
 // Models/GZEUser
 "user.username.fieldName"="usuario";
@@ -52,4 +40,16 @@
 // Views/GZEBlurViewController
 "label.blurView.applyButtonTitle"="Aplicar";
 
+
+// GoozeApi/GZEApiError
+"username"="usuario";
+"email"="correo electrónico";
+"password"="contraseña";
+"birthday"="fecha de nacimiento";
+
+"can\'t be blank"="no puede estar vacio";
+"is not a valid date"="no es una fecha valida";
+"Invalid password"="no puede estar vacio";
+"login failed"="Usuario o contraseña incorrectos";
+"email and password are required"="Ingresa tu correo electrónico y contraseña";
 
