--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 // ViewModel/GZEActivateGoozeViewModel
 "vm.activate.activateButtonTitle"="Activate gooze";
 "vm.activate.searchButtonTitle"="Search gooze";
+"vm.activate.allResultsButtonTitle"="View all results";
 
 // Views/GZEBlurViewController
 "label.blurView.applyButtonTitle"="Apply";
