--- a/Gooze/es.lproj/Localizable.strings
+++ b/Gooze/es.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 // ViewModel/GZEActivateGoozeViewModel
 "vm.activate.activateButtonTitle"="Activar gooze";
 "vm.activate.searchButtonTitle"="Buscar gooze";
+"vm.activate.allResultsButtonTitle"="Ver listado completo";
 
 // Views/GZEBlurViewController
 "label.blurView.applyButtonTitle"="Aplicar";
