--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "validation.lengthMin"="The field %@ must be a minimum of %d characters";
 "validation.lengthMax"="The field %@ must be a maximum of %d characters";
 "validation.exists"="%@ already exists";
+"validation.underAge"="You must be of legal age";
 
 // Models/GZEUser
 "user.username.fieldName"="Username";
@@ -41,6 +42,9 @@
 "user.dateQualityRating.fieldName"="Date quality";
 "user.dateRating.fieldName"="Date rating";
 "user.goozeRating.fieldName"="Gooze rating";
+
+"vm.user.ageLabel"="Age";
+"vm.user.ageUnit"="Years";
 
 // Models/GZEUser/Gender
 "male"="male";
