Implemented web socket service to handle date and chat events, implemente auth service

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -90,6 +90,7 @@
 // ViewModel/GZEActivateGoozeViewModel
 "vm.search.viewTitle"="Search";
 "vm.search.zeroResultsMessage"="No matches found";
+"vm.search.searchingButtonTitle"="Searching...";
 
 "vm.activate.activateButtonTitle"="Activate gooze";
 "vm.activate.deactivateButtonTitle"="Deactivate gooze";
