Implemented alert service and improved auth service logic

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -7,8 +7,9 @@
 */
 
 // Protocols/GZEUserApiRepositoryError
+"Unexpected Error"="Unexpected Error. Please contact support";
 "error.repository.authRequired"="Login to continue";
-
+"error.repository.comunication"="Unable to establish communication with server";
 
 
 // Protocols/GZEValidationError
